--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <main class="login-box">
-    <h2>Iniciar Seccion</h2>
+    <h2>Iniciar Sesión</h2>
     <form action="">
         <section class="user-box">
           <input type="text" required>
